--- a/main.html
+++ b/main.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Why I want to become a developer?</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h1>Why I want to become a developer?</h1>
+    <p>Becoming a software developer has always been a natural path for me, driven by my passion for problem-solving, creativity, and technology. I find immense satisfaction in taking complex challenges and breaking them down into manageable tasks that can be solved through code. The constantly evolving nature of the field excites me, as there is always something new to learn and master. Moreover, the ability to build applications that can have a real-world impact and improve people's lives motivates me to continually enhance my skills and knowledge. The sense of accomplishment that comes from writing efficient, scalable, and clean code is incredibly rewarding, and it pushes me to strive for excellence in my development journey.</p>
 </body>
-
 </html>
